[package]
name = "takurinton"
version = "0.1.0"
authors = ["takurinton <takurinton@takurinton.dev>"]
edition = "2018"

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
regex = "0.1"
reqwest = { version = "0.11.13", features = ["json"] }
percent-encoding = "2.2.0"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rss = "2.0"
chrono = "0.4"