[package]
name = "takurinton"
version = "0.1.0"
authors = ["takurinton <takurinton@takurinton.dev>"]
edition = "2018"

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1.6", features = ["full"] }
regex = "0.1"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rss = "2.0"
chrono = "0.4"
tokio-native-tls = "0.3"
native-tls = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3.0"
